--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
   "workspaces": [
     "packages/*"
   ],
-  "packageManager": "yarn@4.0.2"
+  "packageManager": "yarn@4.0.2",
+  "type": "module"
 }
