--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "@nx/js": "17.1.3",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "@typescript-eslint/parser": "^6.13.1",
+    "eslint": "^8.55.0",
     "nx": "17.1.3",
     "prettier": "^3.1.0",
     "rollup": "^4.6.1",
