@mjsdo/eslint-config -> @mjsdo/eslint-plugin 으로 이름 변경

--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -1,13 +1,24 @@
 {
-  "name": "@mjsdo/eslint-config",
+  "name": "@mjsdo/eslint-plugin",
+  "author": {
+    "name": "mjsdo"
+  },
   "version": "0.0.0",
   "type": "module",
   "license": "MIT",
-  "main": "./dist/index.js",
+  "main": "./dist/esm/index.js",
   "exports": {
     ".": {
       "require": "./dist/cjs/index.cjs",
       "import": "./dist/esm/index.js"
+    },
+    "./*": {
+      "require": "./dist/cjs/*.cjs",
+      "import": "./dist/esm/*.js"
+    },
+    "./*.js": {
+      "require": "./dist/cjs/*.cjs",
+      "import": "./dist/esm/*.js"
     }
   },
   "devDependencies": {
