--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
+  "type": "module",
+  "packageManager": "yarn@4.0.2",
+  "scripts": {
+    "release": "changesets release",
+    "version": "changesets version"
+  },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
     "@nx/js": "17.1.3",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.55.0",
+    "eslint-plugin-import-exports-imports-resolver": "^1.0.1",
     "nx": "17.1.3",
     "prettier": "^3.1.0",
     "rollup": "^4.6.1",
@@ -17,7 +25,5 @@
   },
   "workspaces": [
     "packages/*"
-  ],
-  "packageManager": "yarn@4.0.2",
-  "type": "module"
+  ]
 }
