--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,10 +20,16 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v4
 
-      - name: Setup Node.js 20
+      # https://github.com/actions/setup-node/issues/899#issuecomment-1828798029
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
+      - run: corepack enable
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: yarn
 
       - name: Check Cache
         uses: actions/cache@v3
