--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "packageManager": "yarn@4.0.2",
   "scripts": {
-    "release": "changesets release",
-    "version": "changesets version"
+    "packages:release": "changeset release",
+    "packages:version": "changeset version"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
