--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "license": "MIT",
   "main": "./dist/esm/index.js",
+  "files": ["dist"],
   "exports": {
     ".": {
       "require": "./dist/cjs/index.cjs",
