--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Install Dependencies
         run: yarn install --immutable
 
+      - name: Build
+        run: yarn packages:build
+
       - name: Create Release Pull Request or Publish to npm
         uses: changesets/action@v1
         with:
