--- a/packages/eslint-plugin/package.json
+++ b/packages/eslint-plugin/package.json
@@ -29,10 +29,7 @@
     "glob": "^10.3.10"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
-    "eslint": ">=8",
-    "eslint-plugin-import": "^2.29.0"
+    "eslint": ">=8"
   },
   "packageManager": "yarn@4.0.2",
   "scripts": {
